src/objects/GP_Regla__c.object
<CustomObject>
    <description>Reglas p/sumar o restar puntos - Gestor de Puntos</description>
    <fields>
        <fullName>Activa__c</fullName>
        <description>La regla estará Activa si la fecha actual esta entre Vigencia desde y Vigencia Hasta.</description>
        <formula>AND(TODAY() &gt; Vigencia_desde__c, TODAY() &lt; Vigencia_hasta__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion_regla__c</fullName>
        <label>Descripcion regla</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dias_vencimiento__c</fullName>
        <label>Dias para vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evento_general__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evento General</label>
        <referenceTo>GP_Evento_General__c</referenceTo>
        <relationshipLabel>GP Reglas</relationshipLabel>
        <relationshipName>GP_Reglas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fecha_vencimiento__c</fullName>
        <label>Fecha de vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metodo_a_ejecutar__c</fullName>
        <label>Metodo a ejecutar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operador_calculo__c</fullName>
        <label>Operador calculo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeComparaContraElValorFijo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SeComparaContraElValorFijo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_de_evento__c</fullName>
        <label>Tipo de evento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Confiabilización</fullName>
                </value>
                <value>
                    <fullName>Premio Recarga 3M</fullName>
                </value>
                <value>
                    <fullName>Castigo Recarga</fullName>
                </value>
                <value>
                    <fullName>Recarga por Monto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cater</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Alta a FOL</fullName>
                </value>
                <value>
                    <fullName>Continuidad FOL</fullName>
                </value>
                <value>
                    <fullName>Alta a Débito Automatico</fullName>
                </value>
                <value>
                    <fullName>Descarga APP</fullName>
                </value>
                <value>
                    <fullName>Alta Nuevo Servicio Core</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Convergente Fiber</fullName>
                </value>
                <value>
                    <fullName>Convergente Arnet</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Canje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_calculo__c</fullName>
        <label>Valor calculo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_resultado_fijo__c</fullName>
        <label>Valor resultado fijo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_resultado_variable__c</fullName>
        <label>Valor calculo variable</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_calculo__c</fullName>
        <label>Variable calculo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vencimiento_fecha_fija__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True : Vence en una fecha determinada.
False : Vence luego de la cantidad de días que se especifique.</description>
        <label>Vencimiento en fecha fija</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vigencia_desde__c</fullName>
        <label>Vigencia desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vigencia_hasta__c</fullName>
        <label>Vigencia hasta</label>
        <type>Date</type>
    </fields>
    <label>GP Regla</label>
    <nameField>
        <label>Nombre de Regla</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Reglas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>